<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/tools"
    tools:context=".ui.activity.gear.AddGear">

    <include
        android:id="@+id/include"
        layout="@layout/app_bar_main" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                app:contentPadding="20dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
              >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/add_shoe_details"
                    android:textColor="#404040"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:id="@+id/ll_walking"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/ll_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <AutoCompleteTextView
                            android:id="@+id/text_brand_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="Enter Brand Name"
                            android:textSize="16sp"
                            android:layout_weight="1"
                            android:textColor="@color/normal_text"
                            android:fontFamily="@font/montserrat_medium"
                             />


                    </LinearLayout>



                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@color/dark_gray" />

                    <LinearLayout
                        android:id="@+id/ll_model_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <AutoCompleteTextView
                            android:id="@+id/text_model_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:hint="Enter Model Name"
                           android:textSize="16sp"
                            android:background="@null"

                            android:layout_weight="1"
                            android:textColor="@color/normal_text"
                            android:fontFamily="@font/montserrat_medium"
                            />


                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@color/dark_gray" />

                    <LinearLayout
                        android:id="@+id/ll_distance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="2"
                            android:id="@+id/text_set_distance"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="@string/set_max_distance"
                            style="@style/NormalText"/>

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginRight="10dp"

                            android:layout_gravity="end|center"

                            android:src="@drawable/ic_baseline_add_24" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@color/dark_gray" />

                    <LinearLayout
                        android:id="@+id/ll_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:id="@+id/text_date_of_using"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="2"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="@string/set_date_of_start_usage"
                            style="@style/NormalText" />

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="end|center"
                            android:layout_marginEnd="10dp"
                            android:src="@drawable/ic_baseline_add_24" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@color/dark_gray" />



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:id="@+id/ll_type"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:id="@+id/text_activity_type"
                            android:layout_marginRight="10dp"
                            android:layout_weight="2"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="@string/assign_activity_type"
                            style="@style/NormalText" />


                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@color/dark_gray" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="2"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="@string/walking"
                            style="@style/NormalText" />

                        <RadioButton
                            android:layout_width="30dp"
                            android:id="@+id/radio_walking"
                            android:layout_marginEnd="10dp"
                            android:buttonTint="@color/purple_700"
                            android:layout_height="30dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:id="@+id/ll_running"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="2"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="@string/running"
                            style="@style/NormalText" />

                        <RadioButton
                            android:layout_width="30dp"
                            android:layout_marginEnd="10dp"
                            android:checked="true"
                            android:buttonTint="@color/purple_700"
                            android:id="@+id/radio_running"
                            android:layout_height="30dp"/>

                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:layout_marginBottom="100sp"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center"
                    android:padding="2dp"
                    android:text="Lorem ipsum dolor sit amet, consectetuer adipiscing elit "
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/slide_desc" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonSave"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center|bottom"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="40sp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/button_theme"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/save_shoe"
                    android:textColor="#FFF" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>